--- a/Example.API/Dockerfile
+++ b/Example.API/Dockerfile
@@ -22,7 +22,11 @@ FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./Example.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
+
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY ./Example.API/2.pfx /app/certificates/
+
+
 ENTRYPOINT ["dotnet", "Example.API.dll"]
