--- a/Example.API/Properties/launchSettings.json
+++ b/Example.API/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7240;http://localhost:5118"
+      "applicationUrl": "https://localhost:5001"
     },
     "http": {
       "commandName": "Project",
