--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,17 @@ services:
     build:
       context: .
       dockerfile: Example.Angular/Dockerfile
+
+    develop:
+      watch:
+        - action: sync
+          path: ./Example.Angular/src
+          target: /app/src
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: package.json
+
     environment:
       - Production
     ports:
