--- a/loadbalancer/nginx.conf
+++ b/loadbalancer/nginx.conf
@@ -3,32 +3,42 @@
   }
 http {
   upstream angular {
-    # These are references to our backend containers, facilitated by
-    # Compose, as defined in docker-compose.yml
     server angular:4200;
   } 
   upstream api {
-    # These are references to our backend containers, facilitated by
-    # Compose, as defined in docker-compose.yml
     server api:5001;
   }
   
 
  server {
     listen 80;
+    listen 443 ssl;
+    #return 301 https://$host$request_uri;
     server_name angular;
     server_name api;
 
+    # https
+    ssl_certificate /etc/nginx/ssl/localhost.crt;
+    ssl_certificate_key /etc/nginx/ssl/localhost.key;
+    ssl_trusted_certificate /etc/nginx/ssl/localhost_full.crt;
+
+    #ssl_certificate /etc/letsencrypt/live/$host/fullchain.pem;
+    #ssl_certificate_key /etc/letsencrypt/live/$host/privkey.pem;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location / {
-       resolver 127.0.0.11 valid=30s;
+       
        proxy_pass http://angular;
-       # для работы websocket
+       # РїСЂРѕС‚РѕРєРѕР» websocket
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "Upgrade";
        proxy_set_header Host $host;
     }
     location /api {
-       resolver 127.0.0.11 valid=30s;
+  
        proxy_pass https://api;
        proxy_set_header Host $host;
     }
