--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,41 @@ networks:
 
 services:
 
-  nginx: #name of the fourth service
+  # letsencrypt:
+  #   image: jrcs/letsencrypt-nginx-proxy-companion
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #     - ./letsencrypt:/etc/letsencrypt
+  #     - ./webroot:/var/www/certbot
+  #     - ./certs:/etc/nginx/certs
+  #     - ./html:/usr/share/nginx/html
+  #     - ./acme:/etc/acme.sh  
+  #   environment:
+  #     - NGINX_PROXY_CONTAINER=nginx
+  #     - NGINX_DOCKER_GEN_CONTAINER=nginx
+  #   depends_on:
+  #     - nginx 
+
+  # certbot:
+  #   image: certbot/certbot
+  #   volumes:
+  #     - ./letsencrypt:/etc/letsencrypt
+  #     - ./webroot:/var/www/certbot
+  #   command: certonly --register-unsafely-without-email --webroot -w /var/www/certbot -d example.com -d www.example.com --agree-tos --no-eff-email --force-renewal
+  #   environment:
+  #     - WEBROOT=/var/www/certbot
+  #   depends_on:
+  #     - nginx
+
+  nginx:
     container_name: ContainerNginx
     build: 
       context: .
       dockerfile: loadbalancer/Dockerfile
     restart: always
     ports:
-      - "80:80" #specify ports forewarding
+      - "80:80"
+      - "443:443"
     links:
       - api
       - angular
