--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -20,8 +20,8 @@ jobs:
           username: artik3314@gmail.com
           password: Aa003314+
 
-#      - name: Setup Docker Buildx
-#        uses: docker/setup-buildx-action@v1
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1
 #
 #      - name: Build and push
 #        uses: docker/build-push-action@v2
