--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -22,12 +22,12 @@ jobs:
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
-#
-#      - name: Build and push
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: .
-#          file: ./docker-compose.yml
-#          load: true
-#          push: true
-#          tags: your-dockerhub-username/your-repo-name:latest
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./docker-compose.yml
+          load: true
+          push: true
+          tags: your-dockerhub-username/your-repo-name:latest
