--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -3,11 +3,8 @@
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
 jobs:
-  build-and-push:
+  publish:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,11 +20,8 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./docker-compose.yml
-          load: true
-          push: true
-          tags: your-dockerhub-username/your-repo-name:latest
+      - name: Configure Docker CLI
+#        run: echo "${{ secrets.DOCKER_HUB_USERNAME }}" | docker login -u $DOCKER_HUB_USERNAME --password-stdin
+
+      - name: Run script to build and push images
+        run: ./build_and_push.sh
