--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -21,7 +21,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Configure Docker CLI
-#        run: echo "${{ secrets.DOCKER_HUB_USERNAME }}" | docker login -u $DOCKER_HUB_USERNAME --password-stdin
+        run: echo "${{ secrets.DOCKER_HUB_USERNAME }}" | docker login -u $DOCKER_HUB_USERNAME --password-stdin
 
       - name: Run script to build and push images
         run: ./build_and_push.sh
