--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -17,5 +17,7 @@ jobs:
           username: artik3314@gmail.com
           password: Aa003314+
 
+      - name: Make script executable
+        run: chmod +x build_and_run.sh
       - name: Run script to build and push images
         run: ./build_and_push.sh
