--- a/Example.API/Dockerfile
+++ b/Example.API/Dockerfile
@@ -26,7 +26,7 @@ RUN dotnet publish "./Example.API.csproj" -c $BUILD_CONFIGURATION -o /app/publis
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-COPY ./Example.API/2.pfx /app/certificates/
+#COPY ./Example.API/2.pfx /app/certificates/
 
 
 ENTRYPOINT ["dotnet", "Example.API.dll"]
