--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
       - name: Make script executable
         run: chmod +x build_and_push.sh
       - name: Run script to build and push images
