--- a/Example.API/appsettings.json
+++ b/Example.API/appsettings.json
@@ -6,23 +6,16 @@
     }
   },
   "AllowedHosts": "*",
-
   "Kestrel": {
     "Endpoints": {
       "Https": {
         "Url": "https://*:5001",
         "Certificate": {
-          "Path": "/app/certificates/2.pfx",
-          "Password": "123"
+          "Path": "/app/certificate/localhost.pfx",
+          "Password": "1234"
         }
       }
     }
   }
-
-
-
-
-
-
-
 }
+
