--- a/Example.API/appsettings.json
+++ b/Example.API/appsettings.json
@@ -6,6 +6,16 @@
     }
   },
   "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "MSSQL": "Server=WIN-PO9SVP3KRMT\\MSSQLSERVER01;Database=SportStore;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SportStore;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "PostgreSQL": "Host=db;Port=5432;Database=Example;Username=postgres;Password=root",
+    "MySQL": "server=localhost;user=root;password=root;database=SportStore;",
+    "SQLite": "Data Source=SportStore.db"
+  },
+  
+  
   "Kestrel": {
     "Endpoints": {
       "Https": {
