--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -8,24 +8,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-      - name: Make script executable
-        run: chmod +x build_and_push.sh
-      - name: Run script to build and push images
-        run: ./build_and_push.sh
 
       - name: Connect to VPS via SSH and execute command
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY_BASE64 }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             sudo docker ps
