--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -18,3 +18,12 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             sudo docker ps
+            
+      - name: Clone or update repository on VPS
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            git clone https://github.com/artemovsergey/React.git /home/artik3314/project/
