--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -8,18 +8,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
-
-      - name: Connect to VPS via SSH and execute command
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            sudo docker ps
-            
-      - name: Clone or update repository on VPS
+        
+      - name: Clone or update repository from Github
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.VPS_HOST }}
@@ -27,3 +17,16 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             git clone https://github.com/artemovsergey/React.git /home/artik3314/project/
+      
+      - name: Deploy docker-compose to VPS
+        uses: appleboy/ssh-action@master
+        with:
+              host: ${{ secrets.VPS_HOST }}
+              username: ${{ secrets.VPS_USERNAME }}
+              key: ${{ secrets.SSH_PRIVATE_KEY }}
+              script: |
+                cd /home/artik3314/project/
+                docker-compose -f docker-compose-production.yml down
+                docker system prune -a -f
+                docker-compose -f docker-compose-production.yml pull
+                docker-compose -f docker-compose-production.yml up --build
