Развертывание на VPS

--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -8,6 +8,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+      - name: Delete old repository from VPS
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            rm -rf /home/artik3314/project
         
       - name: Clone or update repository from Github
         uses: appleboy/ssh-action@master
