--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -38,3 +38,4 @@ jobs:
                 docker-compose -f docker-compose-production.yml down
                 docker-compose -f docker-compose-production.yml pull
                 docker-compose -f docker-compose-production.yml up --build
+                docker ps
