--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -26,6 +26,9 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             git clone https://github.com/artemovsergey/React.git /home/artik3314/project/
+            
+      - name: Make vps script executable
+        run: chmod +x vps.sh
       
       - name: Deploy docker-compose to VPS
         uses: appleboy/ssh-action@master
@@ -33,10 +36,4 @@ jobs:
               host: ${{ secrets.VPS_HOST }}
               username: ${{ secrets.VPS_USERNAME }}
               key: ${{ secrets.SSH_PRIVATE_KEY }}
-              script: |
-                cd /home/artik3314/project/
-                docker-compose -f docker-compose-production.yml down
-                docker-compose -f docker-compose-production.yml pull
-                docker-compose -f docker-compose-production.yml up --build
-                sleep 10
-                docker ps
+              run: ./vps.sh
