--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -28,10 +28,10 @@ jobs:
             git clone https://github.com/artemovsergey/React.git /home/artik3314/project/
             
       - name: Make script executable
-        run: chmod +x ./build_and_push.sh
+        run: chmod +x build_and_push.sh
             
       - name: Make vps script executable
-        run: chmod +x ./vps.sh
+        run: chmod +x vps.sh
       
       - name: Deploy docker-compose to VPS
         uses: appleboy/ssh-action@master
