--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -42,4 +42,5 @@ jobs:
               host: ${{ secrets.VPS_HOST }}
               username: ${{ secrets.VPS_USERNAME }}
               key: ${{ secrets.SSH_PRIVATE_KEY }}
-              run: ./vps.sh
+              script: |
+                ./vps.sh
