--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -43,4 +43,4 @@ jobs:
               username: ${{ secrets.VPS_USERNAME }}
               key: ${{ secrets.SSH_PRIVATE_KEY }}
               script: |
-                ./vps.sh
+                /home/artik3314/project/vps.sh
