--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -8,10 +8,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
+      - name: Make script executable
+        run: chmod +x ./build_and_push.sh
+
+      - name: Run script to build and push images
+        run: ./build_and_push.sh
+      
       - name: Delete old repository from VPS
         uses: appleboy/ssh-action@master
         with:
@@ -30,12 +41,8 @@ jobs:
           script: |
             git clone https://github.com/artemovsergey/React.git /home/artik3314/project/
             
-      - name: Make script executable
-        run: chmod +x ./build_and_push.sh
-            
-      - name: Make vps script executable
-        run: chmod +x ./vps.sh
-      
+
+    
       - name: Deploy docker-compose to VPS
         uses: appleboy/ssh-action@master
         with:
