--- a/loadbalancer/nginx.conf
+++ b/loadbalancer/nginx.conf
@@ -18,9 +18,9 @@ http {
     server_name api;
 
     # https
-    ssl_certificate /etc/nginx/ssl/localhost.crt;
-    ssl_certificate_key /etc/nginx/ssl/localhost.key;
-    ssl_trusted_certificate /etc/nginx/ssl/localhost_full.crt;
+    ssl_certificate /etc/nginx/ssl/asvapp.crt;
+    ssl_certificate_key /etc/nginx/ssl/asvapp.key;
+    #ssl_trusted_certificate /etc/nginx/ssl/localhost_full.crt;
 
     #ssl_certificate /etc/letsencrypt/live/$host/fullchain.pem;
     #ssl_certificate_key /etc/letsencrypt/live/$host/privkey.pem;
