Настройка переключения SSL сертификата в зависимости от среды разработки

--- a/loadbalancer/nginxproduction.conf
+++ b/loadbalancer/nginxproduction.conf
@@ -8,18 +8,7 @@ http {
   upstream api {
     server api:5001;
   }
-  
-  map $ssl_server_name $certfile {
-      #default /etc/nginx/ssl/localhost.crt;
-      asvapp.ru    /etc/nginx/ssl/asvapp.crt;
-      localhost   /etc/nginx/ssl/localhost.crt;
-  }
-  map $ssl_server_name $keyfile {
-       #default /etc/nginx/ssl/localhost.key;
-       asvapp.ru    /etc/nginx/ssl/asvapp.key;
-       localhost   /etc/nginx/ssl/localhost.key;
-  }
-  
+    
  server {
     listen 80;
     listen 443 ssl;
@@ -27,10 +16,9 @@ http {
     server_name angular;
     server_name api;
     
-    ssl_certificate $certfile;
-    ssl_certificate_key $keyfile;
-    # Корневой сертификат
-    ssl_trusted_certificate /etc/nginx/ssl/localhost_full.crt;
+    # https
+    ssl_certificate /etc/nginx/ssl/asvapp.crt;
+    ssl_certificate_key /etc/nginx/ssl/asvapp.key;
 
     location / {
        
