--- a/loadbalancer/nginx.conf
+++ b/loadbalancer/nginx.conf
@@ -19,7 +19,7 @@ http {
        asvapp.ru    /etc/nginx/ssl/asvapp.key;
        localhost   /etc/nginx/ssl/localhost.key;
   }
-  
+    
  server {
     listen 80;
     listen 443 ssl;
@@ -29,8 +29,9 @@ http {
     
     ssl_certificate $certfile;
     ssl_certificate_key $keyfile;
+    
     # Корневой сертификат
-    ssl_trusted_certificate /etc/nginx/ssl/localhost_full.crt;
+    #ssl_trusted_certificate /etc/nginx/ssl/localhost_full.crt;
 
     location / {
        
